subscribing-option added

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+main {
+    margin: 240px auto;
+}
+
 .color-primary {
     color: #E55473;
 }
@@ -125,6 +129,52 @@
 .discount-flower img {
     width: 318px;
     height: 420px;
+}
+
+/* instagram section   */
+.instagram-images {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+}
+
+/* form section */
+.subscribe {
+    background-image: url(images/Rectangle\ 9.png);
+    background-repeat: no-repeat;
+    width: 1440px;
+    height: 449px;
+    margin: 130px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.subscibe-title {
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 0;
+}
+
+.subscribe-description {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom:48px;
+}
+
+input {
+    border: 0;
+    background-color: #FFF;
+    width: 700px;
+    height: 48px;
+    border-radius: 8px;
+    margin-right: 15px;
+    padding-left: 20px;
 }
 
 /* footer section  */
