--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 main {
-    margin: 240px 0;
+    margin: 240px auto;
 }
 
 .color-primary {
@@ -98,6 +98,7 @@ main {
 .flower-name {
     text-align: center;
     margin-top: 32px;
+    text-decoration-line: underline;
 }
 
 /* discount-section */
